# mlops-project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd-docker.yml  ci-code.yml  ci.yml
artifacts/: reference_data.csv
data/processed/: car_price_cleaned.csv
src/app/: api.py  streamlit_app.py
src/data/: load_data.py  preprocess.py
src/models/: train.py
tests/: test_api.py  test_load_data.py  test_preprocess.py  test_train.py
