[project]
name = "mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=0.4.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
    "ruff>=0.15.0",
    "mlflow>=3.9.0",
]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79

[tool.flake8]
max-line-length = 79

[tool.ruff]
line-length = 79
